--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-
-<h1>Hello World</h1>
-
-<p>Párrafo fasdf sd fasd asdf asd fsdfsdafsddssdfdsfdsfdsf sdf dsf sd f d ds fds dsf df d</p>
+<html>
+<head>
+    <title>Esta es mi primera pagina</title>
+</head>
+<body>
+    <h1>Esto es un encabezado</h1>
+    <p>Y esto es un parrafo, donde podemos escribir todo el rollo que se nos ocurra.
+</body>
+</html>
